[#157394547] Fixed header icon styles on mobile.

--- a/reactjs/components/atoms/HeaderIcon/_styles.scss
+++ b/reactjs/components/atoms/HeaderIcon/_styles.scss
@@ -3,6 +3,7 @@
   display: inline-flex;
   align-items: center;
   margin: 0 0.6em;
+  text-align: center;
 
   .icon {
     width: 1.3em;
